[package]
name = "gmod-macros"
version = "2.0.1"
authors = ["William Venner <william@venner.io>"]
edition.workspace = true
license = "MIT"
description = "Proc macros for gmod-rs"
repository = "https://github.com/WilliamVenner/gmod-rs"

[features]
gmcl = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
syn = { version = "2.0.118", features = ["full"] }
quote = "1"
